src/test/ui/parser/macro/trait-non-item-macros.stderr
error: expected one of `async`, `const`, `crate`, `extern`, `fn`, `pub`, `type`, or `unsafe`, found `2`
  --> $DIR/trait-non-item-macros.rs:2:19
   |
LL |     ($a:expr) => ($a)
   |                   ^^ expected one of 8 possible tokens
...
LL |     bah!(2);
   |     -------- in this macro invocation

error: aborting due to previous error

